added padding and centered stuff so it looks pretty

--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -16,11 +16,13 @@
 
 <div class="row">
   
-  <div class="col-md-6">
-    <p id="about">Phosphorus is an app for sun-based mindfulness. Get a reminder 30 minutes before sunrise and sunset to have a chance to get outside and enjoy the sun.</p>
+  <div class="col-md-6 d-flex align-items-center">
+    <span class="align-middle">
+      <p id="about">Phosphorus is an app for sun-based mindfulness. Get a reminder 30 minutes before sunrise and sunset to have a chance to get outside and enjoy the sun.</p>
+    </span>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-6 d-flex align-items-center">
     <div class="wrapper">
       <a href="https://www.healthline.com/health/depression/benefits-sunlight">
         <div class="item">
@@ -39,7 +41,7 @@
 
 <div class="row">
   
-  <div class="col-md-6">
+  <div class="col-md-6 d-flex align-items-center">
     <div class="wrapper">
       <a href="https://www.health.harvard.edu/staying-healthy/vitamin-d-and-your-health-breaking-old-rules-raising-new-hopes">
         <div class="item">
@@ -54,7 +56,7 @@
     </div>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-6 d-flex align-items-center">
     <p id="about">Watching a sunrise/sunset has noted mental benefits, and is a great way to start or end your day. </p>
   </div>
 
@@ -62,11 +64,11 @@
 
 <div class="row">
   
-  <div class="col-md-6">
+  <div class="col-md-6 d-flex align-items-center">
     <p id="about"><strong>Phosphorus</strong> uses HereMaps and Airvisual APIs to generate local geodata from user input. </p>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-6 d-flex align-items-center">
     <div class="wrapper">
       <a href="https://mrc.ukri.org/news/browse/scientists-uncover-how-sunlight-on-skin-reduces-eczema-inflammation/">
         <div class="item">
