--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -42,8 +42,15 @@
   opacity: 0.6;
 }
 
-p.about {
-
+#about {
+  font-family: 'Lato', sans-serif;
+  font-size: 15pt;
+  background: #636574;
+  color: #e2dedb;
+  text-align: center;
+  vertical-align: center;
+  margin: 20px;
+  padding: 30px;
 }
 
 
