--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -65,7 +65,7 @@
 <div class="row">
   
   <div class="col-md-6 d-flex align-items-center">
-    <p id="about"><strong>Phosphorus</strong> uses HereMaps and Airvisual APIs to generate local geodata from user input. </p>
+    <p id="about"><strong>PHOSPHORUS</strong> uses HereMaps and Airvisual APIs to generate local geodata from user input. </p>
   </div>
 
   <div class="col-md-6 d-flex align-items-center">
