--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -26,7 +26,7 @@
                           <div class="card-body">
                               <form class="output">
                                 <p>Today's sunset: <br>{{ local_sunset }}</p>
-                                <p>Today's next sunrise: <br>{{ local_sunrise }}</p>
+                                <p>Today's sunrise: <br>{{ local_sunrise }}</p>
                                 <p>Local Air Quality Index: {{ local_ip_aqi }} </p>
 
                               </form>
