--- a/apps/accounts/templates/accounts/edit_profile.html
+++ b/apps/accounts/templates/accounts/edit_profile.html
@@ -6,6 +6,10 @@
 {% endblock title %}
 
 {% block content %}
+<video autoplay muted loop id="myVideo2">
+    <source src="/static/videos/sunset.mp4" type="video/mp4">
+</video>
+
 <div class="row">
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <h1 class="text-center">{{ request.user }}</h1>
