--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -1,11 +1,11 @@
 /* Custom CSS goes here */
 
 .navbar {
+  background-color: #636574;
   overflow: hidden;
   position: fixed;
   bottom: 0;
   width: 100%;
-  margin-top: 20px;
 }
 
 .nav-link {
@@ -42,6 +42,10 @@
   opacity: 0.6;
 }
 
+#gravatar {
+  border-radius: 50%;
+}
+
 #about {
   font-family: 'Lato', sans-serif;
   font-size: 15pt;
@@ -53,6 +57,19 @@
   padding: 30px;
 }
 
+button.btn-secondary {
+  font-family: 'Lato', sans-serif;
+  font-size: 15pt;
+  background: #636574;
+  text-align: center;
+  vertical-align: center;
+  margin: 20px;
+}
+
+a.prof-link {
+  background: #636574;
+  color: #e2dedb;
+}
 
 /* CSS FOR SUBMISSION FORM */
 
