--- a/apps/accounts/templates/accounts/profile_page.html
+++ b/apps/accounts/templates/accounts/profile_page.html
@@ -21,19 +21,20 @@
             <p>{{ user.bio }}</p>
 
             {% if is_viewing_self %}
-                <button type="button" class="btn btn-secondary"><a class="prof-link" href="{% url "edit_profile" %}">Edit</a></button>
+                <button type="button" class="btn btn-secondary"><a class="prof-link" href="{% url "edit_profile" %}">Edit Profile</a></button>
                 <button type="button" class="btn btn-secondary"><a class="prof-link" href="{% url "add_location" %}">Add Location</a></button>
             {% endif %}
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-12 text-center">
-            <h4>My Locations</h4>
-            
-                {% for location in locations %}
-                <p>{{ location }}</p>
-                {% endfor %}
+        <div class="col-md-4 col-centered text-center">
+            <div id="locations-box">
+                <h4>My Locations</h4>
+                
+                    {% for location in locations %}
+                    <p>{{ location }}</p>
+                    {% endfor %}
             
         </div>
     </div>
