--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -44,6 +44,7 @@
 
 #gravatar {
   border-radius: 50%;
+  margin: 10px;
 }
 
 #about {
@@ -69,6 +70,19 @@ button.btn-secondary {
 a.prof-link {
   background: #636574;
   color: #e2dedb;
+}
+
+#locations-box {
+/*  background: rgb(111,152,186);
+  background: linear-gradient(180deg, rgba(111,152,186,1) 0%, rgba(0,7,66,1) 100%);*/
+  background-color: #e2dedb;
+  opacity: 0.7;
+  border-radius: 10px;
+}
+
+.col-centered{
+    float: none;
+    margin: 0 auto;
 }
 
 /* CSS FOR SUBMISSION FORM */
