little tweaking, got rid of radius styling on profile stuff to match home

--- a/apps/accounts/templates/accounts/profile_page.html
+++ b/apps/accounts/templates/accounts/profile_page.html
@@ -28,10 +28,10 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-centered text-center">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto text-center">
             <div id="locations-box">
-                <h4>My Locations</h4>
-                
+                <h4>MY PLACES</h4>
+                    <hr>
                     {% for location in locations %}
                     <p>{{ location }}</p>
                     {% endfor %}
